# efl

./: .arcconfig  .gbs.conf  .gitignore  .gitmodules  .lcov-config  .lgtm.yml  .mailmap  .travis.yml  1  AUTHORS  CMakeLists.txt  COMPLIANCE  COPYING  COPYING.images  ChangeLog  ChangeLog.eet  ChangeLog.evil.0  Makefile.am  Makefile_Elm_Helpers.am  NEWS  NEWS.eet  NEWS.eina  NOTES  README  README.evil  README.md  README.meson  TODO-cmake.txt  TODO-eo2  autogen.sh  build.bat  build.sh  config.h.cmake  configure.ac  configure.bat  eet.pc.in  efl.manifest  elm_intro.h.in  examples_checks.py  gendoc.lua  (+8 more)
.ci/example/: meson.build
cmakeconfig/: EcordovaConfig.cmake.in  EcordovaCxxConfig.cmake.in  EcoreConfig.cmake.in  EcoreCxxConfig.cmake.in  EdjeConfig.cmake.in  EetConfig.cmake.in  EetCxxConfig.cmake.in  EezeConfig.cmake.in  EflConfig.cmake.in  EflatXmlModelConfig.cmake.in  EflatXmlModelCxxConfig.cmake.in  EfreetConfig.cmake.in  EinaConfig.cmake.in  EinaCxxConfig.cmake.in  EioConfig.cmake.in  EjsonConfig.cmake.in  EjsonCxxConfig.cmake.in  EldbusConfig.cmake.in  ElementaryConfigVersion.cmake.in  EluaConfig.cmake.in  EmileConfig.cmake.in  EmotionConfig.cmake.in  EoConfig.cmake.in  EoCxxConfig.cmake.in  EolianConfig.cmake.in  EolianCxxConfig.cmake.in  EolianHelper.cmake  EolianHelper.cmake.in  EsoapModelConfig.cmake.in  EsoapModelCxxConfig.cmake.in  EthumbClientConfig.cmake.in  EthumbConfig.cmake.in  EvasConfig.cmake.in  EvasCxxConfig.cmake.in  meson.build
config/: Makefile.am
config/default/: Makefile.am  base.src.in  profile.desktop
config/mobile/: Makefile.am  base.src.in
config/standard/: Makefile.am  base.src.in  profile.desktop
data/: .gitignore  Makefile.am  libeo.so.1.7.99-gdb.py  meson.build
data/coverity/: model.c
data/ecore_imf/: checkme
data/ecore_x/: checkme
data/edje/: edc.vim  edje-mode.el  meson.build
data/eeze/: checkme
data/efreet/: checkme
data/elementary/: meson.build
data/embryo/: default.inc  meson.build
data/emotion/: checkme
data/eo/: .gitignore  eo-mode.el  eo_gdb.py  eo_step.py  libeo-gdb.py.in  meson.build
data/ethumb_client/: checkme
data/evas/: checkme  evas.xml  meson.build
dbus-services/: .gitignore  meson.build  org.enlightenment.Efreet.service.in  org.enlightenment.Ethumb.service.in
doc/: .gitignore  Doxyfile.in  Eo_Tutorial  Makefile.am  e.css  ecore_examples.dox  edbus_examples.dox  edje_examples.dox  eet_examples.dox  efl_copy.sh  eina_examples.dox  eio.dox.in  eio_examples.dox  eldbus_examples.dox  elementary_examples.dox  elementary_examples_cxx.dox  elementary_examples_js.dox  emotion_examples.dox  eo_tutorial.dox  ephysics_examples.dox  evas_examples.dox  foot.html  head.html  images.mk  index_elm.dox  main.dox  meson.build  pkgconfig.dox  shot.sh  widget_hierarchy.py
doc/docfx/: .gitignore  README  docfx.json  filterConfig.yml  gendoc.sh  index.md  setup.sh  toc.yml
doc/img/: 01_hash-table.eps  basic2final.eps  border-effect.eps  bouncing_text.eps  box.eps  box_inheritance_tree.eps  bubble_inheritance_tree.eps  calendar_inheritance_tree.eps  camera.eps  clipping.eps  clock_inheritance_tree.eps  ctxpopup_inheritance_tree.eps  datetime_inheritance_tree.eps  dayselector_inheritance_tree.eps  diagram_ephysics.eps  ecore_con-client-server-example.eps  ecore_con-client-server-example2.eps  ecore_thread.eps  edje-basics-example.eps  edje-box2-example.eps  edje-color-class-example2.eps  edje-drag-example.eps  edje-nested.eps  edje-table-example.eps  edoxy.css  eina-list-foreach.eps  eina-list-free.eps  eina_array-growth.eps  eina_inlist-node.eps  eina_inlist-node_eg1-my-struct.eps  eina_inlist-node_eg3-two-inlists.eps  eina_list_example_01_b.eps  entry_inheritance_tree.eps  entry_item.eps  evas-box-example-00.eps  evas-box-example-03.eps  evas-box-example-05.eps  evas-stacking-example-00.eps  evas-stacking-example-03.eps  evas-stacking-example-04.eps  (+39 more)
doc/previews/: Makefile.am  filter_blend.sh  filter_blur.sh  filter_bump.sh  filter_curve.sh  filter_example_1.sh  filter_grow.sh  filter_mask.sh  filter_transform.sh  preview_text_filter.c
doc/widgets/: Makefile.am  widget_preview_bg.c  widget_preview_bubble2.c  widget_preview_button3.c  widget_preview_check1.c  widget_preview_check2.c  widget_preview_check3.c  widget_preview_clock.c  widget_preview_colorselector.c  widget_preview_ctxpopup.c  widget_preview_datetime1.c  widget_preview_datetime3.c  widget_preview_entry1.c  widget_preview_fileselector_button2.c  widget_preview_flipselector.c  widget_preview_frame.c  widget_preview_gengrid.c  widget_preview_genlist1.c  widget_preview_genlist2.c  widget_preview_genlist3.c  (+26 more)
efl-eins/: meson.build
header_checks/: meson.build
po/: .gitignore  LINGUAS  Makevars  Makevars.in  POTFILES.in  POTFILES.skip  ar.po  az_IR.po  ca.po  cs.po  da.po  de.po  el.po  eo.po  es.po  fa.po  fi.po  fr.po  gl.po  he.po  hu.po  it.po  ja.po  ka.po  ko.po  ko_KR.po  lt.po  meson.build  nl.po  pl.po  ps.po  pt.po  ru.po  sl.po  sr.po  tr.po  ur.po  vi.po  xgettext_wrapper  xgettext_wrapper.sh  (+2 more)
src/: .gitignore  CMakeLists.txt  CMakeLists_Eina.txt  Makefile.am  Makefile_Automated.am  Makefile_Csharp_Helper.am  Makefile_Cxx.am  Makefile_EDBus.am  Makefile_EPhysics.am  Makefile_Ecordova.am  Makefile_Ecordova_Cxx.am  Makefile_Ecore.am  Makefile_Ecore_Audio.am  Makefile_Ecore_Audio_Cxx.am  Makefile_Ecore_Avahi.am  Makefile_Ecore_Buffer.am  Makefile_Ecore_Cocoa.am  Makefile_Ecore_Con.am  Makefile_Ecore_Cxx.am  Makefile_Ecore_DirectFB.am  Makefile_Ecore_Drm.am  Makefile_Ecore_Drm2.am  Makefile_Ecore_Evas.am  Makefile_Ecore_FB.am  Makefile_Ecore_File.am  Makefile_Ecore_IMF.am  Makefile_Ecore_IMF_Evas.am  Makefile_Ecore_Imf.am  Makefile_Ecore_Input.am  Makefile_Ecore_Input_Evas.am  Makefile_Ecore_Ipc.am  Makefile_Ecore_Js.am  Makefile_Ecore_Libinput.am  Makefile_Ecore_Psl1ght.am  Makefile_Ecore_SDL.am  Makefile_Ecore_Wayland.am  Makefile_Ecore_Win32.am  Makefile_Ecore_WinCE.am  Makefile_Ecore_Wl2.am  Makefile_Ecore_X.am  (+63 more)
ssg/: meson.build  meson_options.txt
systemd-services/: .gitignore  efreet.service.in  ethumb.service.in  meson.build
(+13739 files in other folders)
